// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders styles properly 1`] = `
.c0 {
  margin-right: 5px;
  width: 16px;
  height: 16px;
}

.c1 {
  fill: #636363;
}

<svg
  className="c0"
  size="medium"
  type="primary"
  version="1.1"
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <g
    className=""
    type="primary"
  >
    <svg
      className="c0"
      size="medium"
      type="secondary"
      version="1.1"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
      xmlnsXlink="http://www.w3.org/1999/xlink"
    >
      <g
        className=""
        type="secondary"
      >
        <path
          className="c1"
          clipRule="evenodd"
          d="M11.1464 6.85355C11.4614 6.53857 11.2383 6 10.7929 6L5.20711 6C4.76165 6 4.53857 6.53857 4.85355 6.85355L7.64645 9.64645C7.84171 9.84171 8.15829 9.84171 8.35355 9.64645L11.1464 6.85355Z"
          fill="#0F0B0A"
          fillRule="evenodd"
          height="100%"
          type="secondary"
          width="100%"
        />
      </g>
    </svg>
  </g>
</svg>
`;

exports[`jest-auto-snapshots > Icon Matches snapshot when boolean prop "isChevron" is set to: "false" 1`] = `
<ForwardRef
  isChevron={false}
  size="small"
  type="primary"
  version="1.1"
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <ForwardRef
    type="primary"
  >
    <NodeFixture />
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Icon Matches snapshot when passed all props 1`] = `
<ForwardRef
  isChevron={true}
  size="small"
  type="primary"
  version="1.1"
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <ForwardRef
    type="primary"
  >
    <NodeFixture />
  </ForwardRef>
</ForwardRef>
`;

exports[`jest-auto-snapshots > Icon Matches snapshot when passed only required props 1`] = `
<ForwardRef
  size="medium"
  type="secondary"
  version="1.1"
  viewBox="0 0 16 16"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <ForwardRef
    type="secondary"
  >
    <NodeFixture />
  </ForwardRef>
</ForwardRef>
`;
